# docs/swagger.json
@@ -432,6 +432,30 @@
                         "name": "Cookie2",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "example": 3,
+                        "name": "class_number",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "example": 10,
+                        "name": "grade",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "example": "TJKT",
+                        "name": "major",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "example": 10,
+                        "name": "offset",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -661,6 +685,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "data to update class",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payloads.RequestUpdateClass"
+                        }
                     }
                 ],
                 "responses": {
@@ -882,6 +915,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "data to set form teacher",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payloads.RequestSetFormTeacher"
+                        }
                     }
                 ],
                 "responses": {
@@ -1181,6 +1223,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "data to add students",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payloads.RequestAddStudents"
+                        }
                     }
                 ],
                 "responses": {
@@ -1296,7 +1347,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "permission"
+                    "parent"
                 ],
                 "summary": "Get existing parents",
                 "parameters": [
@@ -1314,49 +1365,31 @@
                         "required": true
                     },
                     {
-                        "type": "array",
-                        "items": {
-                            "enum": [
-                                "create",
-                                "read",
-                                "update",
-                                "delete"
-                            ],
-                            "type": "string"
-                        },
-                        "collectionFormat": "csv",
-                        "name": "action",
+                        "type": "string",
+                        "name": "email",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "male",
+                            "female"
+                        ],
+                        "type": "string",
+                        "x-enum-varnames": [
+                            "GenderMale",
+                            "GenderFemale"
+                        ],
+                        "name": "gender",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "example": 10,
                         "name": "offset",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "example": "rol",
                         "name": "q",
-                        "in": "query"
-                    },
-                    {
-                        "type": "array",
-                        "items": {
-                            "enum": [
-                                "role",
-                                "permission",
-                                "admin",
-                                "teacher",
-                                "student",
-                                "parent",
-                                "subject",
-                                "class"
-                            ],
-                            "type": "string"
-                        },
-                        "collectionFormat": "csv",
-                        "name": "resource",
                         "in": "query"
                     }
                 ],
@@ -2467,6 +2500,105 @@
                 }
             }
         },
+        "/students/{id}": {
+            "put": {
+                "description": "Admin with permission update student resource only",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "student"
+                ],
+                "summary": "Update existing student profile",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "access_token",
+                        "name": "Cookie",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "refresh_token",
+                        "name": "Cookie2",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "student id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "data to update student",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payloads.RequestUpdateStudent"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/swaglib.Envelope"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/definitions/models.Student"
+                                                },
+                                                {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "parents": {
+                                                            "type": "array",
+                                                            "items": {
+                                                                "$ref": "#/definitions/models.Parent"
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            ]
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/swaglib.Envelope"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/reply.ErrorPayload"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/subjects": {
             "get": {
                 "description": "Admin with permission read subject resource or teacher only",
@@ -3275,6 +3407,25 @@
                 "RoleUnsetted"
             ]
         },
+        "payloads.RequestAddStudents": {
+            "type": "object",
+            "required": [
+                "id",
+                "student_ids"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "student_ids": {
+                    "type": "array",
+                    "minItems": 1,
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "payloads.RequestCreateClass": {
             "type": "object",
             "required": [
@@ -3440,6 +3591,21 @@
                 "target_id": {
                     "type": "string",
                     "example": "479b5b5f-81b1-4669-91a5-b5bf69e597c6"
+                }
+            }
+        },
+        "payloads.RequestSetFormTeacher": {
+            "type": "object",
+            "required": [
+                "id",
+                "teacher_id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "teacher_id": {
+                    "type": "string"
                 }
             }
         },
@@ -3624,6 +3790,26 @@
                 }
             }
         },
+        "payloads.RequestUpdateClass": {
+            "type": "object",
+            "properties": {
+                "class_number": {
+                    "type": "integer",
+                    "minimum": 1,
+                    "example": 3
+                },
+                "grade": {
+                    "type": "integer",
+                    "maximum": 12,
+                    "minimum": 1,
+                    "example": 10
+                },
+                "major": {
+                    "type": "string",
+                    "example": "TJKT"
+                }
+            }
+        },
         "payloads.RequestUpdateParent": {
             "type": "object",
             "required": [
@@ -3669,6 +3855,30 @@
                     "type": "string",
                     "minLength": 10,
                     "example": "updated name"
+                }
+            }
+        },
+        "payloads.RequestUpdateStudent": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "nisn": {
+                    "type": "string",
+                    "example": "0091913711"
+                },
+                "parent_ids": {
+                    "description": "replace current parents",
+                    "type": "array",
+                    "maxItems": 2,
+                    "minItems": 2,
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
